Fix default colors so contrasting can be applied

--- a/large-catalog/assets/date-location.css
+++ b/large-catalog/assets/date-location.css
@@ -12,8 +12,6 @@
 
   padding: 12px 24px;
 
-  background-color: var(--color-blue);
-
   border-radius: 8px;
 
   cursor: pointer;
@@ -25,8 +23,6 @@
 
   width: 100%;
 
-  color: var(--color-white);
-
   margin-right: 16px;
 }
 
@@ -35,8 +31,6 @@
   max-width: 12px;
 
   width: 100%;
-
-  color: var(--color-white);
 }
 
 .date-location bq-date-picker::part(cleanstate-labels) {
@@ -52,7 +46,6 @@
   margin: 0;
 
   font-weight: var(--font-weight-semibold);
-  color: var(--color-white);
 }
 
 .date-location bq-date-picker::part(cleanstate-description) {
@@ -60,8 +53,6 @@
   line-height: 24px;
 
   margin: 0;
-
-  color: var(--color-white);
 }
 
 .date-location bq-date-picker::part(wrapper) {
